Se agrega el APK para instalar

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,11 @@ android {
     buildFeatures {
         dataBinding = true
     }
+
+    lintOptions {
+        checkReleaseBuilds false
+    }
+
 }
 
 dependencies {
